--- a/src/app/pages/graficas/graficos/revolucion/revolucion.component.html
+++ b/src/app/pages/graficas/graficos/revolucion/revolucion.component.html
@@ -1,4 +1,6 @@
 <div class="container charts-gauge dark">
+     <!-- [view]="view"  agregar esa etiqueta para que tome el tamaño fijo especificado en el
+    comoponente.ts-->
     <ngx-charts-gauge
   [view]="view"
   [scheme]="colorScheme"
