--- a/src/app/pages/graficas/graficos/ruleta/ruleta.component.html
+++ b/src/app/pages/graficas/graficos/ruleta/ruleta.component.html
@@ -1,5 +1,7 @@
 
     <div class=" grafica">
+         <!-- [view]="view"  agregar esa etiqueta para que tome el tamaño fijo especificado en el
+    comoponente.ts-->
         <ngx-charts-advanced-pie-chart 
    
         [scheme]="colorScheme" [results]="single" [gradient]="gradient"
