--- a/src/app/pages/graficas/graficos/tarjetas/tarjetas.component.html
+++ b/src/app/pages/graficas/graficos/tarjetas/tarjetas.component.html
@@ -1,3 +1,5 @@
+ <!-- [view]="view"  agregar esa etiqueta para que tome el tamaño fijo especificado en el
+    comoponente.ts-->
 <ngx-charts-number-card
   [scheme]="colorScheme"
   [results]="single"
