--- a/src/app/pages/graficas/graficos/torta/torta.component.html
+++ b/src/app/pages/graficas/graficos/torta/torta.component.html
@@ -1,4 +1,6 @@
 <div class=" grafica">
+     <!-- [view]="view"  agregar esa etiqueta para que tome el tamaño fijo especificado en el
+    comoponente.ts-->
     <ngx-charts-pie-chart 
     
     [scheme]="colorScheme" [results]="single" [gradient]="gradient" [legend]="showLegend"
