--- a/src/app/pages/graficas/graficos/graficos.component.html
+++ b/src/app/pages/graficas/graficos/graficos.component.html
@@ -1,3 +1,13 @@
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <button class="btn btn-primary" (click)="downloadFile()">
+                <i class="bi bi-printer">  Descargar</i>
+                
+            </button>
+        </div>
+    </div>
+</div>
 <div class="container" id="infpdf">
     <div class="row justify-content-center ">
         <div class="col-xm-12 col-md-10 col-lg-5  ruleta">
@@ -34,6 +44,5 @@
         </div>
     </div>
 </div>
-
 
 <!--<app-revolucion></app-revolucion>-->
