--- a/src/app/pages/graficas/graficos/timecalls/timecalls.component.html
+++ b/src/app/pages/graficas/graficos/timecalls/timecalls.component.html
@@ -1,4 +1,6 @@
 <div class="grafica">
+     <!-- [view]="view"  agregar esa etiqueta para que tome el tamaño fijo especificado en el
+    comoponente.ts-->
         <ngx-charts-bar-horizontal-2d
   [scheme]="colorScheme"
   [schemeType]="schemeType"
