--- a/src/app/pages/graficas/graficos/graficos.component.css
+++ b/src/app/pages/graficas/graficos/graficos.component.css
@@ -1,18 +1,49 @@
+.informe{
+    padding: 30px;
+}
 .ruleta{
     padding: 100px 10px;
+    border-radius: 4px;
+    box-shadow: 1px 1px 1px 1px #999;
+}
+.tarjetas{
+    box-shadow: 1px 1px 1px 1px #999;
+    border-radius: 4px;
+    overflow: auto;
 }
 .torta{
 }
-.row1{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
+
 .lineas{
     display: flex;
     justify-content: center;
+    margin-top: 40px;
+    padding-top: 30px;
+    border-radius: 4px;
+    box-shadow: 1px 1px 1px 1px #999;
+    overflow: auto;
 }
 .circulos{
     display: flex;
     justify-content: center;
+    border-radius: 4px;
+    box-shadow: 1px 1px 1px 1px #999;
+    margin-bottom: 40px;
+    overflow: auto;
+}
+.encuesta{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    border-radius: 4px;
+    box-shadow: 1px 1px 1px 1px #999;
+}
+.barras{
+    padding-left: 20px;
+}
+.barras-calls{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    border-radius: 4px;
+    box-shadow: 1px 1px 1px 1px #999;
+    overflow: auto;
 }
