--- a/src/app/pages/graficas/graficos/graficos.component.html
+++ b/src/app/pages/graficas/graficos/graficos.component.html
@@ -8,7 +8,7 @@
         </div>
     </div>
 </div>
-<div class="container" id="infpdf">
+<div class="container-fluid informe" id="infpdf">
     <div class="row justify-content-center ">
         <div class="col-xm-12 col-md-10 col-lg-5  ruleta">
             <app-ruleta></app-ruleta>
@@ -22,7 +22,7 @@
             <app-lineas></app-lineas>
         </div>
     </div>
-    <div class="row">
+    <div class="row encuesta">
         <div class="col-md-5 torta">
             <app-torta></app-torta>
         </div>
@@ -30,11 +30,11 @@
             <app-barras></app-barras>
         </div>
     </div>
-    <div class="row">
-        <div class="col-md-6">
+    <div class="row barras-calls">
+        <div class="col-md-6 barras-agrupadas">
             <app-barras-agrupadas></app-barras-agrupadas>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 timecalls">
             <app-timecalls></app-timecalls>
         </div>
     </div>
