--- a/src/app/pages/graficas/graficos/lineas/lineas.component.html
+++ b/src/app/pages/graficas/graficos/lineas/lineas.component.html
@@ -2,6 +2,7 @@
      <!-- [view]="view"  agregar esa etiqueta para que tome el tamaño fijo especificado en el
     comoponente.ts-->
             <ngx-charts-line-chart
+  [view]="view"
   [scheme]="colorScheme"
   [legend]="legend"
   [showXAxisLabel]="showXAxisLabel"
